--- a/frontend/app/views/patterns/patterns.scala.html
+++ b/frontend/app/views/patterns/patterns.scala.html
@@ -25,6 +25,12 @@
 
     <h1>Pattern Library</h1>
 
+    @pattern("Icons") {
+        <svg class="icon">
+          <use xlink:href="#icon-location" />
+        </svg>
+    }
+
     @pattern("Base - Inline Text Elements") {
         <div class="copy">
             <p><a href="#">This is a text link</a></p>
