--- a/frontend/assets/stylesheets/theme/_tones.scss
+++ b/frontend/assets/stylesheets/theme/_tones.scss
@@ -68,6 +68,16 @@
     border-color: $c-tone-patron;
 }
 
+.tone-friend--fill {
+    fill: $c-tone-friend;
+}
+.tone-partner--fill {
+    fill: $c-tone-partner;
+}
+.tone-patron--fill {
+    fill: $c-tone-patron;
+}
+
 .tone-tint {
     background-color: $c-tone-tint;
 }
