--- a/frontend/app/views/fragments/joiner/joinStepCounter.scala.html
+++ b/frontend/app/views/fragments/joiner/joinStepCounter.scala.html
@@ -1,5 +1,5 @@
 @(currentStep: Int, totalSteps: Int)
 
-<div class="step-counter">
+<div class="steps">
     Step @currentStep of @totalSteps
 </div>
