--- a/frontend/app/views/info/feedback.scala.html
+++ b/frontend/app/views/info/feedback.scala.html
@@ -13,9 +13,11 @@
 
         <section class="form-section form-section--no-padding">
             <div class="form-section__content copy">
-                <p>Use the form below to send us your comments or suggestions on Guardian membership. We'd like to hear it.</p>
-                <p>We read all feedback carefully, but please note we cannot respond to all comments submitted.</p>
-                <p>If you’re having any problems please visit our <a href="/help">help section</a>.</p>
+                <div class="form-detail">
+                    <p>Use the form below to send us your comments or suggestions on Guardian membership. We'd like to hear it.</p>
+                    <p>We read all feedback carefully, but please note we cannot respond to all comments submitted.</p>
+                    <p>If you’re having any problems please visit our <a href="/help">help section</a>.</p>
+                </div>
             </div>
         </section>
 
@@ -29,7 +31,7 @@
 
             <div class="form-section__content">
 
-                <form action="@routes.Info.feedback" method="POST" id="feedback-form" class="form js-feedback-form">
+                <form action="@routes.Info.feedback" method="POST" id="feedback-form" class="form form--top-border js-feedback-form">
                     @CSRF.formField
                     @fragments.form.feedback()
                     @fragments.form.errorMessageDisplay()
