--- a/frontend/assets/stylesheets/base/_forms.scss
+++ b/frontend/assets/stylesheets/base/_forms.scss
@@ -5,7 +5,13 @@
    Form
    ========================================================================== */
 .form {
-    border-top: 1px solid $mem-blue;
+    @include mq(desktop) {
+        border-top: 1px solid $mem-blue;
+    }
+}
+
+.form--top-border {
+    border-top: 1px solid $c-neutral3;
 }
 
 /* ==========================================================================
