--- a/frontend/assets/stylesheets/components/_messages.scss
+++ b/frontend/assets/stylesheets/components/_messages.scss
@@ -4,7 +4,11 @@
     padding: rem(7px) rem(($gs-baseline / 3) * 2);
     border-top: 1px solid;
     border-bottom: 1px solid;
-    margin-bottom: rem($gs-baseline / 2);
+    margin-bottom: rem($gs-baseline);
+
+    @include mq(tablet) {
+        margin-bottom: 0;
+    }
 }
 
 .flash-message--error {
