--- a/frontend/assets/stylesheets/components/_payment.scss
+++ b/frontend/assets/stylesheets/components/_payment.scss
@@ -11,9 +11,14 @@
     color: $mem-blue-dark;
     border-top: 1px solid $c-border-brand;
     padding-top: rem($gs-baseline / 2);
+    margin-bottom: rem($gs-gutter);
 
     @include mq(tablet) {
         @include fs-header(3);
+    }
+
+    @include mq(desktop) {
+        margin-right: rem($gs-baseline);
     }
 }
 
