--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -13,7 +13,7 @@
             <div class="page-section__lead-in">
                 @fragments.joiner.joinStepCounter(1, 3)
             </div>
-            <div class="page-section__content page-section__content--full">
+            <div class="page-section__content">
                 <h2 class="h-section h-section--lead">Choose a membership tier to continue with your booking</h2>
                 <ul class="grid grid--single-row grid--bordered grid--3up-stacked">
                     <li class="grid__item">
