WIP - adding photographer and credit to event details page

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -109,6 +109,13 @@
                 <div class="event-content__image" itemprop="image" content="@event.socialImgUrl">
                     @fragments.event.image(event)
                 </div>
+                <div class="event-content__container">
+                    <div class="event-photo-credit">
+                        <span class="icon-caption-camera"></span>
+                        <span>@event.imageMetadata.flatMap(_.description)</span>
+                        <span>Photograph: @event.imageMetadata.flatMap(_.credit)</span>
+                    </div>
+                </div>
             }
         }
 
