--- a/frontend/assets/stylesheets/components/_blocks.scss
+++ b/frontend/assets/stylesheets/components/_blocks.scss
@@ -3,14 +3,39 @@
    ========================================================================== */
 
 .block-description {
+    @include fs-headline(3);
+    color: $c-neutral1;
     background-color: $c-background;
-    padding: rem($gs-gutter / 2) rem($gs-gutter / 2) rem($gs-gutter * 2);
+    padding: rem($gs-gutter / 2);
 
     @include mq(mobileLandscape) {
         padding: rem($gs-gutter);
+        padding-top: rem($gs-baseline * 1.5);
+    }
+    @include mq(tablet) {
+        @include fs-headline(4);
+    }
+    @include mq(desktop) {
+        @include fs-headline(5);
+    }
+}
+    .block-description__text,
+    .block-description__lead {
+        margin-bottom: 0;
+    }
+    .block-description__lead {
+        font-weight: 500;
+        color: $mem-blue-dark;
+    }
+
+// Blocks description padded (modifier)
+.block-description--padded {
+    @include mq(tablet) {
+        padding-bottom: rem($gs-baseline * 3);
     }
 }
 
+// Blocks description right (modifier)
 .block-description--right {
     @include mq(tablet) {
         width: rem(gs-span(5));
@@ -22,11 +47,12 @@
     }
 }
 
+// Blocks description pull (modifier)
 .block-description--pull {
     @include mq(tablet) {
         z-index: 100;
         position: relative;
-        margin-top: rem(-($gs-gutter * 6));
+        margin-top: rem(-($gs-gutter * 5));
         margin-bottom: rem($gs-gutter / 2);
     }
 }
