--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -114,7 +114,7 @@
                     <div class="event-image-credit__detail">
                         <i class="icon-caption-camera u-align-middle"></i>
                         <span class="u-align-middle">@event.imageMetadata.flatMap(_.description)</span>
-                        <span class="u-align-middle">Photograph: @event.imageMetadata.flatMap(_.credit)</span>
+                        <span class="u-align-middle">Photograph: @event.imageMetadata.map(_.photographer)</span>
                     </div>
                 </div>
             }
