pull request suggested changes

--- a/frontend/app/views/fragments/form/cardDetail.scala.html
+++ b/frontend/app/views/fragments/form/cardDetail.scala.html
@@ -42,16 +42,16 @@
 
                 <div class="form-note form-note--right">
                     <ul class="inline-list">
-                        <li class="l-align-middle inline-list__item">
+                        <li class="u-align-middle inline-list__item">
                             We accept
                         </li>
-                        <li class="l-align-middle inline-list__item">
+                        <li class="u-align-middle inline-list__item">
                             <i class="sprite-card sprite-card--small sprite-card--visa"></i>
                         </li>
-                        <li class="l-align-middle inline-list__item">
+                        <li class="u-align-middle inline-list__item">
                             <i class="sprite-card sprite-card--small sprite-card--mastercard"></i>
                         </li>
-                        <li class="l-align-middle inline-list__item">
+                        <li class="u-align-middle inline-list__item">
                             <i class="sprite-card sprite-card--small sprite-card--american-express"></i>
                         </li>
                     </ul>
