--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -33,7 +33,7 @@
 @import 'base/base';
 @import 'base/links';
 @import 'base/lists';
-@import 'base/forms';
+@import 'base/form';
 @import 'base/tables';
 @import 'base/images';
 @import 'base/helpers';
@@ -76,7 +76,7 @@
 @import 'components/nav/brand-bar';
 @import 'components/action';
 @import 'components/page';
-@import 'components/page-form';
+@import 'components/form-layout';
 @import 'components/blocks';
 @import 'components/asides';
 @import 'components/event-items';
