--- a/frontend/assets/stylesheets/components/_event-detail.scss
+++ b/frontend/assets/stylesheets/components/_event-detail.scss
@@ -116,7 +116,7 @@
     right: rem($gs-gutter / 2);
 
     height: rem(44px);
-    background-position: right;
+    background-position: right bottom;
     background-size: contain;
     background-repeat: no-repeat;
 
