--- a/frontend/app/views/fragments/form/cardDetail.scala.html
+++ b/frontend/app/views/fragments/form/cardDetail.scala.html
@@ -21,8 +21,21 @@
                 <h3 class="credit-card-note__header">Ongoing payments</h3>
                 @Benefits.details(tier).pricing.fold{
                 }{ pricing =>
-                    <p>Your card will be charged £<span class="js-card-note-pricing-charge" data-annual="@pricing.yearly" data-month="@pricing.monthly">@pricing.yearly</span> every <span class="js-card-note-pricing-period" data-annual="year" data-month="month">year</span>.
-                    Payments will taken on or shortly after the <span class="js-card-note-payment-taken" data-annual="@Dates.dayInMonthWithSuffixAndMonth()" data-month="@Dates.dayInMonthWithSuffix()">@Dates.dayInMonthWithSuffixAndMonth()</span> every <span class="js-card-note-pricing-period" data-annual="year" data-month="month">year</span>.</p>
+                    <p>Your card will be charged £
+                        <span class="js-card-note-pricing-charge"
+                              data-annual="@pricing.yearly"
+                              data-month="@pricing.monthly">@pricing.yearly</span>
+                        every
+                        <span class="js-card-note-pricing-period"
+                              data-annual="year"
+                              data-month="month">year</span>.
+                        Payments will taken on or shortly after the
+                        <span class="js-card-note-payment-taken"
+                              data-annual="@Dates.dayInMonthWithSuffixAndMonth()"
+                              data-month="@Dates.dayInMonthWithSuffix()">@Dates.dayInMonthWithSuffixAndMonth()</span>
+                        every <span class="js-card-note-pricing-period"
+                                    data-annual="year"
+                                    data-month="month">year</span>.</p>
                 }
             </div>
             <div class="credit-card-note">
