Remove copy to clipboard

--- a/frontend/app/views/testing/testUsers.scala.html
+++ b/frontend/app/views/testing/testUsers.scala.html
@@ -10,9 +10,7 @@
 
         <section class="page-section">
             <div class="page-section__content copy">
-                <h2 class="section-body-headline">New Test User key: <strong>@userString</strong>
-                    <button class="clipboard-button icon-copy-to-clipboard js-copy-to-clipboard-button" data-clipboard-text="@userString"></button>
-                </h2>
+                <h2 class="section-body-headline">New Test User key: <strong>@userString</strong></h2>
                 <div class="text-intro">
                     <p>Your user will be valid for the next half hour. When registering please populate the following fields with your new test user key.</p>
                 </div>
