Logged in homepage design refinements

--- a/frontend/app/views/fragments/media/slideshowItem.scala.html
+++ b/frontend/app/views/fragments/media/slideshowItem.scala.html
@@ -9,7 +9,7 @@
             <span class="progress-indicator__separator">/ </span>
             <span class="progress-indicator__count js-slideshow-total"></span>
         </div>
-        <span class="slideshow__description">@description</span>
+        <div class="slideshow__description">@description</div>
     </figcaption>
     <div data-src="@imgSrc" data-alt="@description" data-class="responsive-img slideshow__image" class="js-image-slideshow"></div>
 </figure>
