--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -22,7 +22,7 @@
 
     <section class="block-description block-description--padded block-description--right block-description--pull tier-required">
         <p class="block-description__lead">Hello <span class="js-user-firstName"></span></p>
-        <p class="block-description__text">Welcome back to Guardian Membership.</p>
+        <p class="block-description__text">Welcome back to Guardian Membership</p>
     </section>
 
     @* ===== Feature panels ===== *@
