--- a/frontend/assets/stylesheets/components/_slideshow.scss
+++ b/frontend/assets/stylesheets/components/_slideshow.scss
@@ -11,7 +11,7 @@ $slideshow-height-desktop: 460px;
     background-color: $c-neutral4;
 
     @include mq(tablet) {
-        min-height: rem(440px);
+        min-height: rem($slideshow-height-tablet);
     }
     @include mq(desktop) {
         min-height: rem($slideshow-height-desktop);
@@ -66,6 +66,7 @@ $slideshow-height-desktop: 460px;
 
     @include mq(tablet) {
         max-width: 50%;
+        padding-right: rem($gs-gutter);
     }
 }
 
