--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -10,34 +10,6 @@
 @import com.gu.membership.salesforce.Tier
 @import configuration.Config
 
-@eventType = @{
-    event match {
-        case _: MasterclassEvent => "masterclasses"
-        case _: GuLiveEvent => "guardian-live"
-    }
-}
-
-@eventTypeLabel = @{
-    event match {
-        case _: MasterclassEvent => { "Masterclasses" }
-        case _: GuLiveEvent => { "Events" }
-    }
-}
-
-@eventTypeLabelFull = @{
-    event match {
-        case _: MasterclassEvent => ("Guardian Masterclasses")
-        case _: GuLiveEvent => ("Guardian Live events")
-    }
-}
-
-@eventListingLink = @{
-    event match {
-        case _: MasterclassEvent => ("/masterclasses")
-        case _: GuLiveEvent => ("/events")
-    }
-}
-
 @becomeMemberCta(ticket: EBTicketClass) = @{
     val ticketSaleDates = model.TicketSaleDates.datesFor(event, ticket)
     val friendCanBuyTicket = ticketSaleDates.tierCanBuyTicket(Tier.Friend)
@@ -47,20 +19,20 @@
     }
 }
 
-@main("Event Detail | " + event.name.text, pageInfo=pageInfo, isBrochure = true, htmlClass = "js-event " + "theme--" + eventType) {
+@main("Event Detail | " + event.name.text, pageInfo=pageInfo, isBrochure = true, htmlClass = "js-event " + "theme--" + event.metadata.identifier) {
 
-    <div class="event-header@if(eventType){ tone-@eventType}">
+    <div class="event-header tone-@event.metadata.identifier">
         <div class="event-header__container">
             <div class="event-masthead u-cf">
                 <div class="event-masthead__title section-header case--lower">
-                    <a href="@eventListingLink" class="minimal-link">@eventTypeLabel</a>
+                    <a href="@event.metadata.eventListUrl" class="minimal-link">@event.metadata.shortTitle</a>
                 </div>
                 <h1 class="event-masthead__name">@event.name.text</h1>
             </div>
         </div>
     </div>
 
-    <div class="event-header event-header--pricing@if(eventType){ tone-@eventType tone-@eventType--accent}">
+    <div class="event-header event-header--pricing tone-@event.metadata.identifier tone-@event.metadata.identifier--accent">
         <div class="event-header__container event-header__container--details">
             <div class="event-details">
                 <div class="event-details__time">
@@ -76,7 +48,7 @@
             @if(event.isNoTicketEvent == false) {
                 @fragments.event.ticketDetails(event)
             }
-            <i class="event-logo@if(eventType){ icon-@eventType}"></i>
+            <i class="event-logo icon-@event.metadata.identifier"></i>
         </div>
 
     </div>
@@ -210,7 +182,7 @@
                     </div>
 
                     @if(!event.isBookable) {
-                        <a class="action action--fullwidth action--search" href="@eventListingLink">Find other @eventTypeLabelFull</a>
+                        <a class="action action--fullwidth action--search" href="@event.metadata.eventListUrl">Find other @event.metadata.title</a>
                     }
                 </div>
             </div>
