--- a/frontend/assets/stylesheets/components/_content.scss
+++ b/frontend/assets/stylesheets/components/_content.scss
@@ -37,7 +37,7 @@
     max-width: rem(gs-span(8));
 
     .content__headline {
-        border-top: 1px solid $c-newsAccent;
+        border-top: 1px solid $mem-brandBlue;
         margin-bottom: rem($gs-baseline);
         padding-top: rem($gs-baseline / 2 - 1px);
     }
