--- a/frontend/assets/stylesheets/components/_help.scss
+++ b/frontend/assets/stylesheets/components/_help.scss
@@ -6,7 +6,7 @@
 }
 
 .help-list {
-    border-top: 1px solid $mem-blue;
+    border-top: 1px solid $mem-brandBlue;
     margin-bottom: rem($gs-baseline);
 }
 
