--- a/frontend/assets/stylesheets/components/_tier.scss
+++ b/frontend/assets/stylesheets/components/_tier.scss
@@ -68,10 +68,10 @@
 }
 .tier-header--partner {
     color: $black;
-    background-color: $mem-brandLightblue;
+    background-color: $c-tone-partner;
 }
 .tier-header--patron {
-    background-color: $mem-brandDarkBlue;
+    background-color: $c-tone-patron;
 }
 
 /* Tier Header - Stacked modifier
