--- a/frontend/assets/stylesheets/components/nav/_control.scss
+++ b/frontend/assets/stylesheets/components/nav/_control.scss
@@ -52,7 +52,7 @@
 .control--faq {
     width: rem($gs-gutter + ($gs-baseline / 2));
     height: rem($gs-gutter + ($gs-baseline / 2));
-    border-color: $mem-blue;
+    border-color: $mem-brandBlue;
     position: absolute;
 
     .control__icon {
