--- a/frontend/assets/stylesheets/layout/_header.scss
+++ b/frontend/assets/stylesheets/layout/_header.scss
@@ -17,7 +17,7 @@
         // move the logo area above side margins
         z-index: 2;
         position: relative;
-        background-color: transparentize($mem-blue, .1);
+        background-color: transparentize($mem-brandBlue, .1);
         padding-top: rem(5px);
         padding-bottom: rem(5px);
         height: rem(48px);
