--- a/frontend/assets/stylesheets/components/_event-items.scss
+++ b/frontend/assets/stylesheets/components/_event-items.scss
@@ -296,7 +296,7 @@
     .event-status--sold-out {
         display: inline-block;
         color: $white;
-        background-color: $mem-live-accent;
+        background-color: $c-tone-live-accent;
         @include fs-data(2);
         position: relative;
         top: rem(-3px);
