--- a/frontend/assets/stylesheets/components/nav/_pop-up.scss
+++ b/frontend/assets/stylesheets/components/nav/_pop-up.scss
@@ -9,7 +9,7 @@
     padding: rem(($gs-baseline / 3) * 2) 0;
     list-style: none;
     margin-bottom: rem(-4px);
-    background-color: darken($mem-blue, 10%);
+    background-color: darken($mem-brandBlue, 10%);
     width: 100%;
 }
 
