--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -62,13 +62,9 @@
                     </span>
                     <span class="block-level event-ticket__details__blurb">Tickets are no longer available</span>
                 </div>
-                @event match {
-                    case _: GuLiveEvent => {
-                        <a class="action action--external action--buy-event-ticket-details" href="@Config.guardianMembershipUrl#video" data-link-name="Watch highlights">Watch highlights of past events</a>
-                    }
-                    case _ => {}
+                @for(highlightsUrl <- event.metadata.highlightsUrlOpt) {
+                    <a class="action action--external action--buy-event-ticket-details" href="@highlightsUrl" data-link-name="Watch highlights">Watch highlights of past events</a>
                 }
-
             </div>
         </div>
     }
