Fix build failure. Correct old var from merge

--- a/frontend/assets/stylesheets/components/_blocks.scss
+++ b/frontend/assets/stylesheets/components/_blocks.scss
@@ -26,7 +26,7 @@
     }
     .block-description__lead {
         font-weight: 500;
-        color: $mem-blue-dark;
+        color: $mem-brandBlueDark;
     }
 
 // Blocks description padded (modifier)
