--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -8,8 +8,17 @@
     eventOpt.fold {
         "Choose a membership tier"
     } {
-        case _: MasterclassEvent => "Become a member of the Guardian to buy your masterclass"
+        case _: MasterclassEvent => "Choose a membership tier to continue with your booking"
         case _: GuLiveEvent => "Guardian Live events are exclusively for Guardian members"
+    }
+}
+
+@sectionTitle = @{
+    eventOpt.fold {
+        "Choose a membership tier to continue with your booking"
+    } {
+        case _: MasterclassEvent => "Become a Partner or Patron to save 20% on your masterclass"
+        case _: GuLiveEvent => "Choose a membership tier to continue with your booking"
     }
 }
 
@@ -24,7 +33,7 @@
                 @fragments.joiner.joinStepCounter(1, 3)
             </div>
             <div class="page-section__content">
-                <h2 class="h-section h-section--lead">Choose a membership tier to continue with your booking</h2>
+                <h2 class="h-section h-section--lead">@sectionTitle</h2>
                 <ul class="grid grid--single-row grid--bordered grid--3up-stacked">
                     <li class="grid__item">
                         @fragments.tier.packagePromo(Tier.Friend, Some("#package-benefits-friend"))
