Add generated grid of icons in sprite to patterns

--- a/frontend/app/views/patterns/patterns.scala.html
+++ b/frontend/app/views/patterns/patterns.scala.html
@@ -26,9 +26,7 @@
     <h1>Pattern Library</h1>
 
     @pattern("Icons") {
-        <svg class="icon">
-          <use xlink:href="#icon-location" />
-        </svg>
+        <div class="js-icon-grid"></div>
     }
 
     @pattern("Base - Inline Text Elements") {
