--- a/frontend/app/views/fragments/inlineIcon.scala.html
+++ b/frontend/app/views/fragments/inlineIcon.scala.html
@@ -1,5 +1,5 @@
-@(name: String, classes: Seq[String] = List())
+@(name: String, classes: Seq[String] = Nil)
 
-<svg class="icon-inline @classes.map("" + _).mkString(" ")">
+<svg class="icon-inline @classes.mkString(" ")">
     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-@name"></use>
 </svg>
